--- a/01.基于React实现自定义地图标注.md
+++ b/01.基于React实现自定义地图标注.md
@@ -16,12 +16,10 @@
 - 图例；
 - 标注：地图上个性化程度较大的部分，如：包含图标形状、数字、名称等数据信息（这些数据信息通常要从应用上下文中获取）。
 
-![img](./01.assets/地图组成部分示意图.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E5%9C%B0%E5%9B%BE%E7%BB%84%E6%88%90%E9%83%A8%E5%88%86%E7%A4%BA%E6%84%8F%E5%9B%BE.png) 
 
 ​			图 1 地图组成部分
 
-> [!NOTE]
->
 > 说明：以下步骤提到的 API 主要基于 React 17 版本。
 
 主流程实现步骤：
@@ -30,31 +28,25 @@
 
 2）获取地图标注数据，并存储到 React 主应用根节点的 Context Provider 中。
 
-> [!NOTE]
->
 > 标注数据通常是发送 Ajax 请求从服务端获取，再存入 Context Provider 中。
 
 3）调用地图 API 创建地图实例的真实 DOM 并挂载到 React 主应用的虚拟 DOM 子节点上。
 
-> [!NOTE]
->
 > 主流地图 API 创建的地图实例只能是真实 DOM，故该步骤实际是 React 虚拟 DOM 与地图真实 DOM 的衔接方法。
 
 4）遍历地图标注数据，依次创建地图标注真实 DOM 节点，在其内部通过 React 组定义组件的方式渲染地图标注。
 
-> [!NOTE]
->
 > 通过地图 API 创建的内部元素（指北针、图例、比例尺、标注）通常也只能是真实 DOM 节点。
 
 整体流程如下图：
 
-![img](./01.assets/主流程图.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E4%B8%BB%E6%B5%81%E7%A8%8B%E5%9B%BE.png) 
 
 ​			图 2 主流程图
 
 完成图2的主流程后，形成下图的 DOM 结构：
 
-![img](./01.assets/整体的DOM树结构.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E6%95%B4%E4%BD%93%E7%9A%84DOM%E6%A0%91%E7%BB%93%E6%9E%84.png) 
 
 ​			图 3 整体的 DOM 树结构
 
@@ -70,31 +62,25 @@
 
 1）根据地图标注的类型加载对应的 React 自定义组件。
 
-> [!NOTE]
->
 > 需要预先开发好各种类型的地图标注，以 React 自定义组件的方式封装起来，在运行时通过标注类型来找到对应的 React 自定义组件，并加载到内存中。
 
 2）React 自定义组件内部通过 ReactDOM.createPortal 挂载到地图主体的真实 DOM 节点中。
 
-> [!NOTE]
->
 > 通过 ReactDOM.createPortal 实现了将 React 自定义组件创建为 Portal，它提供了一种将子节点渲染到存在于父组件以外的真实 DOM 节点的方案。
 
 3）React 自定义组件通过 React.useContext 获取上下文数据。
 
-> [!NOTE]
->
 > React.useContext 可以让自定义组件获取同一棵 React 树的上下文（Context）数据。
 
 子流程的步骤如下图：
 
-![img](./01.assets/通过Portal机制共享上下文数据的子流程.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E9%80%9A%E8%BF%87Portal%E6%9C%BA%E5%88%B6%E5%85%B1%E4%BA%AB%E4%B8%8A%E4%B8%8B%E6%96%87%E6%95%B0%E6%8D%AE%E7%9A%84%E5%AD%90%E6%B5%81%E7%A8%8B.png) 
 
 ​		图 4 通过Portal机制共享上下文数据的子流程
 
 经过图 4 的子流程步骤后，形成下图的 DOM 结构：
 
-![img](./01.assets/通过Portal机制后形成的DOM树结构.png)
+![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E9%80%9A%E8%BF%87Portal%E6%9C%BA%E5%88%B6%E5%90%8E%E5%BD%A2%E6%88%90%E7%9A%84DOM%E6%A0%91%E7%BB%93%E6%9E%84.png)
 
 ​		图 5 通过Portal机制后形成的DOM树结构
 
