refactor: 图片路径替换为相对路径

--- a/wiki/01.基于React实现自定义地图标注.md
+++ b/wiki/01.基于React实现自定义地图标注.md
@@ -16,7 +16,7 @@
 - 图例；
 - 标注：地图上个性化程度较大的部分，如：包含图标形状、数字、名称等数据信息（这些数据信息通常要从应用上下文中获取）。
 
-![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E5%9C%B0%E5%9B%BE%E7%BB%84%E6%88%90%E9%83%A8%E5%88%86%E7%A4%BA%E6%84%8F%E5%9B%BE.png) 
+![img](./01.assets/地图组成部分示意图.png) 
 
 ​			图 1 地图组成部分
 
@@ -40,13 +40,13 @@
 
 整体流程如下图：
 
-![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E4%B8%BB%E6%B5%81%E7%A8%8B%E5%9B%BE.png) 
+![img](./01.assets/主流程图.png) 
 
 ​			图 2 主流程图
 
 完成图2的主流程后，形成下图的 DOM 结构：
 
-![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E6%95%B4%E4%BD%93%E7%9A%84DOM%E6%A0%91%E7%BB%93%E6%9E%84.png) 
+![img](./01.assets/整体的DOM树结构.png) 
 
 ​			图 3 整体的 DOM 树结构
 
@@ -74,13 +74,13 @@
 
 子流程的步骤如下图：
 
-![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E9%80%9A%E8%BF%87Portal%E6%9C%BA%E5%88%B6%E5%85%B1%E4%BA%AB%E4%B8%8A%E4%B8%8B%E6%96%87%E6%95%B0%E6%8D%AE%E7%9A%84%E5%AD%90%E6%B5%81%E7%A8%8B.png) 
+![img](./01.assets/通过Portal机制共享上下文数据的子流程.png) 
 
 ​		图 4 通过Portal机制共享上下文数据的子流程
 
 经过图 4 的子流程步骤后，形成下图的 DOM 结构：
 
-![img](https://raw.githubusercontent.com/rayallen001/article/main/01.assets/%E9%80%9A%E8%BF%87Portal%E6%9C%BA%E5%88%B6%E5%90%8E%E5%BD%A2%E6%88%90%E7%9A%84DOM%E6%A0%91%E7%BB%93%E6%9E%84.png)
+![img](./01.assets/通过Portal机制后形成的DOM树结构.png)
 
 ​		图 5 通过Portal机制后形成的DOM树结构
 
