refactor: 替换图片地址为 https://raw.githubusercontent.com 开头的路径

--- a/wiki/01.基于React实现自定义地图标注.md
+++ b/wiki/01.基于React实现自定义地图标注.md
@@ -16,7 +16,7 @@
 - 图例；
 - 标注：地图上个性化程度较大的部分，如：包含图标形状、数字、名称等数据信息（这些数据信息通常要从应用上下文中获取）。
 
-![img](./01.assets/地图组成部分示意图.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/wiki/01.assets/地图组成部分示意图.png) 
 
 ​			图 1 地图组成部分
 
@@ -40,13 +40,13 @@
 
 整体流程如下图：
 
-![img](./01.assets/主流程图.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/wiki/01.assets/主流程图.png) 
 
 ​			图 2 主流程图
 
 完成图2的主流程后，形成下图的 DOM 结构：
 
-![img](./01.assets/整体的DOM树结构.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/wiki/01.assets/整体的DOM树结构.png) 
 
 ​			图 3 整体的 DOM 树结构
 
@@ -74,13 +74,13 @@
 
 子流程的步骤如下图：
 
-![img](./01.assets/通过Portal机制共享上下文数据的子流程.png) 
+![img](https://raw.githubusercontent.com/rayallen001/article/main/wiki/01.assets/通过Portal机制共享上下文数据的子流程.png) 
 
 ​		图 4 通过Portal机制共享上下文数据的子流程
 
 经过图 4 的子流程步骤后，形成下图的 DOM 结构：
 
-![img](./01.assets/通过Portal机制后形成的DOM树结构.png)
+![img](https://raw.githubusercontent.com/rayallen001/article/main/wiki/01.assets/通过Portal机制后形成的DOM树结构.png)
 
 ​		图 5 通过Portal机制后形成的DOM树结构
 
